--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Babel==2.12.1
 certifi==2022.9.24
 charset-normalizer==3.3.1
 commonmark==0.9.1
-docutils
+docutils<0.21,>=0.18.1
 idna==3.4
 imagesize==1.4.1
 importlib-metadata==6.8.0
@@ -11,20 +11,20 @@ Jinja2==3.1.2
 Markdown==3.4.1
 MarkupSafe==2.1.1
 packaging==21.3
-Pygments==2.13.0
+Pygments>=2.14
 pyparsing==3.1.1
 pytz==2022.7.1
 recommonmark==0.7.1
-requests==2.28.1
+requests>=2.28.1
 snowballstemmer==2.2.0
 Sphinx==7.2.6
 sphinx-markdown-tables==0.0.17
-sphinx-rtd-theme==1.2.0
+sphinx-rtd-theme>=1.2.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-serializinghtml>=1.1.9
 urllib3==2.0.7
 zipp==3.10.0
